@@ -1,8 +1,8 @@
 Package: raster
 Type: Package
 Title: Geographic analysis and modeling with raster data
-Version: 2.0-02
-Date: 13-June-2012
+Version: 2.0-03
+Date: 14-June-2012
 Depends: methods, sp, R (>= 2.13.0)
 Suggests: rgdal (>= 0.6-28), rgeos (>= 0.2-3), ncdf, igraph0, snow, tcltk
 Author: Robert J. Hijmans & Jacob van Etten
